# pong

./: .gitignore  README.md  Taskfile.yaml  pong.py  pyproject.toml
game/: ball.py  paddles.py  settings.py  user_interface.py
